--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo build started on `date`
-      - sudo rm /var/www/html/index.html
+      # - sudo rm /var/www/html/index.html
       - cp index.html /var/www/html
   post_build:
     commands:
