--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: correcto11
+      java: corretto11
   pre_build:
     commands:
       echo nothing in prebuild phases
