--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,19 @@
 version: 0.2
+
 phases:
   install:
     runtime-versions:
       java: corretto11
   pre_build:
     commands:
-      echo nothing in prebuild phases
+      - echo Nothing to do in the pre_build phase...
   build:
     commands:
-      - echo build started on `date`
+      - echo Build started on `date`
       - mvn install
   post_build:
     commands:
-      - echo build completed on `date`
+      - echo Build completed on `date`
 artifacts:
   files:
     - target/messageUtil-1.0.jar
